# a2a-datetime-parser-agent

./: .env.example  README.md  __main__.py  pyproject.toml
a2a_datetime_parser_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: server_agent.py  server_executor.py  server_mcp.py
app/config/: settings.py
app/constants/: __init__.py
app/lib/llm/: __init__.py  groq.py  ollama.py  openai.py
app/types/: __init__.py
app/utils/: datetime.py  logger.py
cli/: __main__.py
